semi-functional REST_API
