# src/main.py
@@ -1,4 +1,6 @@
+import psycopg2 as ps
 import connexion
+
 import controller
 
 def main():
@@ -11,4 +13,27 @@ def main():
     app.run(port=8080)
 
 if __name__ == '__main__':
+
+    connection = ps.connect(
+        dbname="test_db",
+        user="postgres",
+        password="postgres")
+
+    '''
+    import db_utils
+    cursor = connection.cursor()
+    users = [
+         ("TamàsRadvàny", 'password'),
+         ("GiorgioMariani", 'password'),
+         ("DonaldKnuth","1 2 3 4 5 7"),
+         ("xX_pussyDestroyer99_Xx","PaSsWOrD"),
+         ("bob", "bob")]
+
+    u0,p0 = users[0]
+    db_utils.add_user(cursor, u0, p0)
+    cursor.close()'''
+
     main()
+
+    connection.close()
+
