# swagger.yml
@@ -29,15 +29,20 @@ paths:
       operationId: controller.add_user
       parameters:
         - in: body
-          name: username
+          name: user_info
           required: true
           schema:
-            type: string
+            $ref: '#/definitions/User'
+
       responses:
         201:
           description: Successfully created a new user (returning id)
           schema:
             type: integer
+        401:
+          description: Not authorized access
+        409:
+          description: Another user with same username exists
 
     get:
       summary: return all registered users
@@ -48,7 +53,12 @@ paths:
           schema:
             type: array
             items:
-              type: integer
+              type: object
+              properties:
+                username:
+                  type: string
+                user_id:
+                  type: integer
 
 #-------------------------------------------------------------------------------
 
@@ -62,12 +72,15 @@ paths:
     post:
       summary: send a message to a specific user
       operationId: controller.send_message
+      consumes:
+        - text/plain
       parameters:
         - in: body
           name: message
           required: true
           schema:
             type: string
+
       responses:
         201:
           description: Message sent (returning message id)
@@ -77,14 +90,14 @@ paths:
           description: User-id not found
 
     put:
-      summary: update username info
+      summary: update user info
       operationId: controller.update_user
       parameters:
         - in: body
-          name: username
+          name: user_info
           required: true
           schema:
-            type: string
+            $ref: '#/definitions/User'
       responses:
         200:
           description: username info updated
@@ -92,51 +105,15 @@ paths:
           description: User-id not found
 
     get:
-      summary: return user-id and username
+      summary: return user information
       operationId: controller.get_user
       responses:
         200:
           description: user info retrieved successfully
           schema:
-            type: object
-            required:
-              - user_id
-              - username
-            properties:
-              user_id:
-                type: integer
-              username:
-                type: string
+            $ref: '#/definitions/User'
         404:
           description: User-id not found
-
-#-------------------------------------------------------------------------------
-  /users/{username}:
-    parameters:
-      - in: path 
-        name: username
-        required: true
-        type: string
-
-    get:
-      summary: return user-id and username
-      operationId: controller.get_user_v2
-      responses:
-        200:
-          description: user info retrieved successfully
-          schema:
-            type: object
-            required:
-              - user_id
-              - username
-            properties:
-              user_id:
-                type: integer
-              username:
-                type: string
-        404:
-          description: User-id not found
-
 
 #-------------------------------------------------------------------------------
   /users/all:
@@ -144,7 +121,7 @@ paths:
       summary: send a message to all the users
       operationId: controller.broadcast_message
       consumes:
-        - text/html
+        - text/plain
       parameters:
         - in: body
           name: message
@@ -202,10 +179,10 @@ paths:
 
 #-------------------------------------------------------------------------------
 
-  /messages/{msg_id}:
+  /messages/{message_id}:
     parameters:
       - in: path 
-        name: msg_id
+        name: message_id
         required: true
         type: integer
 
@@ -235,22 +212,45 @@ paths:
 # API's models
 #-------------------------------------------------------------------------------
 definitions:
+  User:
+    type: object
+    required:
+      - username
+      - password
+    properties:
+      id:
+        type: integer
+      username:
+        type: string
+      password:
+        type: string
+
+
   Message:
     type: object
     required:
-      - text
+      - message_id
       - sender
       - timestamp
-      - user_read
     properties:
-      text:
+      message_id: 
+        type: string
+      message_text:
         type: string
       sender:
         type: integer
       timestamp:
         type: string
         format: date-time
-      user_read:
+      message_read:
         type: array
         items:
-          type: boolean
+          type: object
+          required:
+            - user_id
+            - has_read
+          properties:
+            user_id:
+              type: integer
+            has_read:
+              type: boolean
